--- a/index.html
+++ b/index.html
@@ -306,18 +306,18 @@
             </a>
             <div style="display: flex; padding-bottom: 83px;">
                 <ul class="categories-list">
-                    <li class="categories-item"><a class="" href="">Дивани</a></li>
-                    <li class="categories-item"><a class="" href="">Ліжка</a></li>
-                    <li class="categories-item"><a class="" href="">Крісла</a></li>
-                    <li class="categories-item"><a class="" href="">Комоди</a></li>
-                    <li class="categories-item"><a class="" href="">Шафи</a></li>
-                    <li class="categories-item"><a class="" href="">Кухня</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Дивани</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Ліжка</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Крісла</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Комоди</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Шафи</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Кухня</a></li>
                 </ul>
                 <ul class="menu-list">
-                    <li class="categories-item"><a class="" href="">Акції</a></li>
-                    <li class="categories-item"><a class="" href="">Доставка та оплата</a></li>
-                    <li class="categories-item"><a class="" href="">Про нас</a></li>
-                    <li class="categories-item"><a class="" href="">Контакти</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Акції</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Доставка та оплата</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Про нас</a></li>
+                    <li class="categories-item-footer"><a class="" href="">Контакти</a></li>
                 </ul>
                 <div>
                     <ul>
